2008-04-02  Xinghua Yang <yxinghua@sunnorth.com.cn>
            Andrew Lunn <andrew.lunn@ascom.ch>
	    Taiyun Wang <taiyun@sunnorth.com.cn>

	* cdl/fatfs.cdl: Use CYGPKG_FS_FAT_RET_DIRENT_DTYPE to control
	  whether fatfs sets file type in fatfs_fo_dirread.
	* src/fatfs.c: Set file type in fatfs_fo_dirread
	* test/fatfs1.c: Test the new d_type in dirent when present.
	
2007-07-31  Hajime Ishitani <pigmon@mail.snd.co.jp>

	* src/fatfs.c: When removing a directory, first remove . and
	.. nodes.
	
2007-02-05  Ya-Chau Yang <a8850607@stmail.fju.edu.tw> 
            Savin Zlobec <savinz@users.sourceforge.net>

	* src/fatfs_supp.c: Fixed FAT32 cluster handling in
	fatfs_delete_file and fatfs_rename_file.

2007-01-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fatfs1.c: Fixed the format string to diag_printf()
	to remove compiler warnings.

2006-08-04  Paul Fine  <pfine@dtccom.com>
            Andrew Lunn <andrew.lunn@ascom.ch>
	
	* src/fats.c: Added functionality to the fatfs_getinfo() function
	to return disk usage information about the filesystem, making this
	information accessible through the cyg_fs_getinfo() interface.
	* tests/fatfs1.c: Added code to test the disk usage.
	
2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fatfs_supp.c: Correct types to remove compiler warnings.

2005-06-07  Savin Zlobec  <savin@elatec.si>

	* src/fatfs_supp.c: lseek returned EEOF when at the end of the
	file rather than the current position. 

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fatfs1.c: Fixed various compiler warnings about types passed to
	diag_printf().

2005-01-18  Savin Zlobec  <savin@elatec.si>

	* src/fatfs_supp.c:
	Fixed FAT12/16 root dir size checking in read_next_raw_dentry - 
	reported by Stephane Royo.

2004-12-13  John Dallaway  <jld@ecoscentric.com>

	* tests/fileio1.c: Rename to fatfs1.c. eCos test names should be
	unique.
	* cdl/fatfs.cdl: Build the renamed test.

2004-11-14  Jani Monoses <jani@iv.ro>
